# memledger

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
evals/: run_locomo.py
src/memledger/: api.py  cli.py  ledger.py  retrieval.py  session.py
tests/: test_acceptance.py  test_locomo_eval.py
